--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ heroku==0.1.4
 requests==2.24.0
 PyYAML==5.3.1
 webexteamssdk==1.6.
-requests
-netmiko
-paramiko
-regex
+requests==2.24.0
+netmiko==3.4.0
+paramiko==2.7.2
+regex==2021.4.4
